--- a/contato.html
+++ b/contato.html
@@ -10,9 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
-  <!-- CSS rules to specify families
-  font-family: 'Lato', sans-serif; -->
   <title>Santos Agência de Viagens</title>
 </head>
 
@@ -42,6 +41,25 @@
       </div>
     </div>
   </nav>
+
+  <!-- Form de contato-->
+  <div class="mb-3">
+    <label for="formGroupExampleInput" class="form-label">Nome:</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
+  </div>
+  <div class="mb-3">
+    <label for="formGroupExampleInput2" class="form-label">Assunto</label>
+    <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
+  </div>
+  <div class="mb-3">
+    <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
+    <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5" placeholder="Deixe a sua mensagem"></textarea>
+  </div>
+
+  <footer>
+    <p>Desenvolvido por Rafael Martins</p>
+  </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
