--- a/contato.html
+++ b/contato.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+  <!-- Meu css -->
   <link rel="stylesheet" href="style.css">
-
   <title>Santos Agência de Viagens</title>
 </head>
 
 <body>
+  <!--Menu do site-->
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <img src="/imagens/marca/santosAgenciaDeViagens.svg" width="100" alt="Logo Agência Santos">
@@ -43,18 +46,24 @@
   </nav>
 
   <!-- Form de contato-->
-  <div class="mb-3">
-    <label for="formGroupExampleInput" class="form-label">Nome:</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
-  </div>
-  <div class="mb-3">
-    <label for="formGroupExampleInput2" class="form-label">Assunto</label>
-    <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
-  </div>
-  <div class="mb-3">
-    <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
-    <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5" placeholder="Deixe a sua mensagem"></textarea>
-  </div>
+  <form action="">
+    <div class="mb-3">
+      <label for="formGroupExampleInput" class="form-label">Nome:</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
+    </div>
+    <div class="mb-3">
+      <label for="formGroupExampleInput2" class="form-label">Assunto</label>
+      <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
+    </div>
+    <div class="mb-3">
+      <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
+      <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5"
+        placeholder="Deixe a sua mensagem"></textarea>
+    </div>
+    <input class="btn btn-primary" type="submit" value="Submit">
+    <input class="btn btn-primary" type="reset" value="Reset">
+  </form>
+
 
   <footer>
     <p>Desenvolvido por Rafael Martins</p>
