--- a/destino.html
+++ b/destino.html
@@ -5,18 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-
-  <!-- CSS rules to specify families
-  font-family: 'Lato', sans-serif; -->
+  <!-- Meu css -->
+  <link rel="stylesheet" href="style.css"><!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+  <!-- Meu css -->
+  <link rel="stylesheet" href="style.css">
   <title>Santos Agência de Viagens</title>
 </head>
 
 <body>
+  <!--Menu do site-->
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <img src="/imagens/marca/santosAgenciaDeViagens.svg" width="100" alt="Logo Agência Santos">
@@ -42,6 +52,50 @@
       </div>
     </div>
   </nav>
+
+  <!-- Opçoes de destino -->
+  <form class="row">
+    <div class="col">
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Destino</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Data da entrada</label>
+        <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Data de saída</label>
+        <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+      </div>
+      <div class="mb-3">
+        <label for="inputState" class="form-label">Quartos</label>
+        <select id="inputState" class="form-select">
+          <option selected>Número de quartos</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="inputState" class="form-label">Hospedes</label>
+        <select id="inputState" class="form-select">
+          <option selected>Número de hóspedes</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+        </select>
+      </div>
+
+      <div class="col">
+        <button type="submit" class="btn btn-primary">Agendar</button>
+      </div>
+    </div>
+  </form>
+  <!-- Footer ou Rodapé do site -->
+  <footer>
+    <p>Desenvolvido por Rafael Martins</p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
