--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div>
 
   <!-- Footer ou Rodapé do site -->
-  <footer>
+  <footer class="cor-rodape">
     <p>Desenvolvido por Rafael Martins</p>
   </footer>
 
