--- a/promocoes.html
+++ b/promocoes.html
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="destino.html">Destino</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="promocoes.html">Promoções</a>
+            <a class="nav-link active" aria-current="page" href="promocoes.html">Promoções</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contato.html">Contato</a>
@@ -46,38 +46,39 @@
 
   <!-- Imagens -->
   <div class="container">
-    <div class="col">
+        <div class="card bg-dark text-white">
+          <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img promocao-image-card" alt="Brasília">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Brasília</h5>
+            <p class="card-text">Áereo + 4 viajens</p>
+            <p class="card-text">Viagem em Dezembro de 2022</p>
+            <p class="card-text">R$ 4999,99</p>
+            <input class="btn btn-primary" type="button" value="Agendar">
+          </div>
+        </div>
+
       <div class="row">
         <div class="card bg-dark text-white">
-          <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img promocao-image-card" alt="...">
+          <img src="./imagens/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="card-img promocao-image-card" alt="Bahia">
           <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Bahia</h5>
+            <p class="card-text">Áereo + 2 viajens</p>
+            <p class="card-text">Viagem em Janeiro de 2023</p>
+            <p class="card-text">R$ 3999,99</p>
+            <input class="btn btn-primary" type="button" value="Agendar">
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="card bg-dark text-white">
-          <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img promocao-image-card" alt="...">
+          <img src="./imagens/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="card-img promocao-image-card" alt="...">
           <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
-          </div>
-        </div>
-
-        <div class="card bg-dark text-white">
-          <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img promocao-image-card" alt="...">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Rio de Janeiro</h5>
+            <p class="card-text">Áereo + 2 viajens</p>
+            <p class="card-text">Viagem em Dezembro de 2022</p>
+            <p class="card-text">R$ 6999,99</p>
+            <input class="btn btn-primary" type="button" value="Agendar">
           </div>
         </div>
       </div>
