--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="destino.html">Destino</a>
@@ -39,7 +39,7 @@
             <a class="nav-link" href="promocoes.html">Promoções</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contato.html">Contato</a>
+            <a class="nav-link active" aria-current="page" href="contato.html">Contato</a>
           </li>
       </div>
     </div>
