Problemas resolvidos, site funcionando.

--- a/destino.html
+++ b/destino.html
@@ -54,44 +54,46 @@
   </nav>
 
   <!-- Opçoes de destino -->
-  <form class="row">
-    <div class="col">
-      <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">Destino</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
-      </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Data da entrada</label>
-        <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
-      </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Data de saída</label>
-        <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
-      </div>
-      <div class="mb-3">
-        <label for="inputState" class="form-label">Quartos</label>
-        <select id="inputState" class="form-select">
-          <option selected>Número de quartos</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-        </select>
-      </div>
-      <div class="mb-3">
-        <label for="inputState" class="form-label">Hospedes</label>
-        <select id="inputState" class="form-select">
-          <option selected>Número de hóspedes</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-        </select>
-      </div>
-
+  <main>
+    <form class="container my-3">
       <div class="col">
-        <button type="submit" class="btn btn-primary">Agendar</button>
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">Destino</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label">Data da entrada</label>
+          <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label">Data de saída</label>
+          <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+        </div>
+        <div class="mb-3">
+          <label for="inputState" class="form-label">Quartos</label>
+          <select id="inputState" class="form-select">
+            <option selected>Número de quartos</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="inputState" class="form-label">Hospedes</label>
+          <select id="inputState" class="form-select">
+            <option selected>Número de hóspedes</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <button type="submit" class="btn btn-primary">Agendar</button>
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </main>
   <!-- Footer ou Rodapé do site -->
   <footer>
     <p>Desenvolvido por Rafael Martins</p>
