--- a/promocoes.html
+++ b/promocoes.html
@@ -45,46 +45,46 @@
   </nav>
 
   <!-- Imagens -->
-  <div class="container">
-        <div class="card bg-dark text-white">
-          <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img promocao-image-card" alt="Brasília">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Brasília</h5>
-            <p class="card-text">Áereo + 4 viajens</p>
-            <p class="card-text">Viagem em Dezembro de 2022</p>
-            <p class="card-text">R$ 4999,99</p>
-            <input class="btn btn-primary" type="button" value="Agendar">
-          </div>
-        </div>
+  <main>
+    <div class="container d-flex justify-content-center gap-3">
 
-      <div class="row">
-        <div class="card bg-dark text-white">
-          <img src="./imagens/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="card-img promocao-image-card" alt="Bahia">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Bahia</h5>
-            <p class="card-text">Áereo + 2 viajens</p>
-            <p class="card-text">Viagem em Janeiro de 2023</p>
-            <p class="card-text">R$ 3999,99</p>
-            <input class="btn btn-primary" type="button" value="Agendar">
-          </div>
+      <div class="card bg-dark promocao-image-card text-white col-4">
+        <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="card-img" alt="Brasília">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Brasília</h5>
+          <p class="card-text">Áereo + 4 viajens</p>
+          <p class="card-text">Viagem em Dezembro de 2022</p>
+          <p class="card-text">R$ 4999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
         </div>
       </div>
 
-      <div class="row">
-        <div class="card bg-dark text-white">
-          <img src="./imagens/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="card-img promocao-image-card" alt="...">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Rio de Janeiro</h5>
-            <p class="card-text">Áereo + 2 viajens</p>
-            <p class="card-text">Viagem em Dezembro de 2022</p>
-            <p class="card-text">R$ 6999,99</p>
-            <input class="btn btn-primary" type="button" value="Agendar">
-          </div>
+      <div class="card bg-dark promocao-image-card text-white  col-4">
+        <img src="./imagens/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="card-img"
+          alt="Bahia">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Bahia</h5>
+          <p class="card-text">Áereo + 2 viajens</p>
+          <p class="card-text">Viagem em Janeiro de 2023</p>
+          <p class="card-text">R$ 3999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
         </div>
       </div>
+
+      <div class="card bg-dark promocao-image-card text-white  col-4">
+        <img src="./imagens/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Rio de Janeiro</h5>
+          <p class="card-text">Áereo + 2 viajens</p>
+          <p class="card-text">Viagem em Dezembro de 2022</p>
+          <p class="card-text">R$ 6999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
+        </div>
+      </div>
+
     </div>
-  </div>
 
+  </main>
   <!-- Footer ou Rodapé do site -->
   <footer>
     <p>Desenvolvido por Rafael Martins</p>
