--- a/contato.html
+++ b/contato.html
@@ -46,24 +46,25 @@
   </nav>
 
   <!-- Form de contato-->
-  <form action="">
-    <div class="mb-3">
-      <label for="formGroupExampleInput" class="form-label">Nome:</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
-    </div>
-    <div class="mb-3">
-      <label for="formGroupExampleInput2" class="form-label">Assunto</label>
-      <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
-    </div>
-    <div class="mb-3">
-      <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
-      <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5"
-        placeholder="Deixe a sua mensagem"></textarea>
-    </div>
-    <input class="btn btn-primary" type="submit" value="Submit">
-    <input class="btn btn-primary" type="reset" value="Reset">
-  </form>
-
+  <main>
+    <form class="container" action="">
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Nome:</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Assunto</label>
+        <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
+        <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5"
+          placeholder="Deixe a sua mensagem"></textarea>
+      </div>
+      <input class="btn btn-primary" type="submit" value="Enviar">
+      <input class="btn btn-primary" type="reset" value="Resetar">
+    </form>
+  </main>
 
   <footer>
     <p>Desenvolvido por Rafael Martins</p>
