--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--Menu do site-->
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <img src="/imagens/marca/santosAgenciaDeViagens.svg" width="100" alt="Logo Agência Santos">
+      <img src="/img/santosAgenciaDeViagens.svg" width="100" alt="Logo Agência Santos">
       <a class="navbar-brand" href="#">Santos Agência de Viagens</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,13 +34,13 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="destino.html">Destino</a>
+            <a class="nav-link" href="#destino">Destino</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="promocoes.html">Promoções</a>
+            <a class="nav-link" href="#promocoes">Promoções</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contato.html">Contato</a>
+            <a class="nav-link" href="#contato">Contato</a>
           </li>
       </div>
     </div>
@@ -62,15 +62,14 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./imagens/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="d-block w-100"
-          alt="...">
+        <img src="./img/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Rio de Janeiro</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagens/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="d-block w-100"
+        <img src="./img/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="d-block w-100"
           alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Salvador</h5>
@@ -78,21 +77,21 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagens/muhammed-ballan-uJiSFH8sFtw-unsplash.jpg" class="d-block w-100" alt="...">
+        <img src="./img/muhammed-ballan-uJiSFH8sFtw-unsplash.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Foz do Iguaçu</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagens/brazil-series-1360301.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brazil-series-1360301.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Curtiba</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagens/brasilia-brazil-2-1560968.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brasilia-brazil-2-1560968.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Brazilia</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -108,6 +107,111 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <!-- Agendar Viagem -->
+  <main>
+    <div>
+      <h2 id="destino">Agende sua viagem!</h2>
+      <form class="container my-3">
+        <div class="col">
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label">Destino</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label">Data da entrada</label>
+            <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label">Data de saída</label>
+            <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
+          </div>
+          <div class="mb-3">
+            <label for="inputState" class="form-label">Quartos</label>
+            <select id="inputState" class="form-select">
+              <option selected>Número de quartos</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="inputState" class="form-label">Hospedes</label>
+            <select id="inputState" class="form-select">
+              <option selected>Número de hóspedes</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
+          </div>
+
+          <div class="col">
+            <button type="submit" class="btn btn-primary">Agendar</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!-- Promoções -->
+    <div class="container d-flex justify-content-center gap-3">
+      <h2 id="promocoes">Veja as promoções principais</h2>
+      <div class="card bg-dark promocao-image-card text-white col-4">
+        <img src="./img/brasilia-brazil-2-1560968.jpg" class="card-img" alt="Brasília">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Brasília</h5>
+          <p class="card-text">Áereo + 4 viajens</p>
+          <p class="card-text">Viagem em Dezembro de 2022</p>
+          <p class="card-text">R$ 4999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
+        </div>
+      </div>
+
+      <div class="card bg-dark promocao-image-card text-white  col-4">
+        <img src="./img/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="card-img"
+          alt="Bahia">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Bahia</h5>
+          <p class="card-text">Áereo + 2 viajens</p>
+          <p class="card-text">Viagem em Janeiro de 2023</p>
+          <p class="card-text">R$ 3999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
+        </div>
+      </div>
+
+      <div class="card bg-dark promocao-image-card text-white  col-4">
+        <img src="./img/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Rio de Janeiro</h5>
+          <p class="card-text">Áereo + 2 viajens</p>
+          <p class="card-text">Viagem em Dezembro de 2022</p>
+          <p class="card-text">R$ 6999,99</p>
+          <input class="btn btn-primary" type="button" value="Agendar">
+        </div>
+      </div>
+    </div>
+
+    <!-- Form de contato-->
+    <div>
+      <h2 id="contato">Em em contato conosco!</h2>
+      <form class="container" action="">
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">Nome:</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label">Assunto</label>
+          <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label">Mensagem</label>
+          <textarea name="mensagem" class="form-control" id="formGroupExampleInput2" cols="15" rows="5"
+            placeholder="Deixe a sua mensagem"></textarea>
+        </div>
+        <input class="btn btn-primary" type="submit" value="Enviar">
+        <input class="btn btn-primary" type="reset" value="Resetar">
+      </form>
+    </div>
+  </main>
 
   <!-- Footer ou Rodapé do site -->
   <footer>
