--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
   <!-- Meu css -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <title>Santos Agência de Viagens</title>
 </head>
@@ -62,39 +62,39 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./img/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brasil-riod-de-janeiro.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Rio de Janeiro</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <p>Conheça a cidade maravilhosa.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="d-block w-100"
+        <img src="./img/brasil-salvador.jpeg" class="d-block w-100"
           alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Salvador</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <p>Cultura por todo lado, alegria, natureza, energia sem igual.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/muhammed-ballan-uJiSFH8sFtw-unsplash.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brasil-cataratas-do-iguacu.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Foz do Iguaçu</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <p>Uma das maiores cataratas do mundo, venha conhecer as supresas do lugar.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/brazil-series-1360301.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brasil-curitiba.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Curtiba</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Curitiba</h5>
+          <p>Arquitetura sem igual, atrações túristicas e muita cultura.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./img/brasilia-brazil-2-1560968.jpg" class="d-block w-100" alt="...">
+        <img src="./img/brasil-brasilia.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Brazilia</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Brasília</h5>
+          <p>Capital do Brasil, uma obra de arte de Oscar Niemeyer, visite já!</p>
         </div>
       </div>
     </div>
@@ -110,8 +110,9 @@
 
   <!-- Agendar Viagem -->
   <main>
+    <h2 id="destino" class="text-center padding-h2">Agende sua viagem!</h2>
     <div>
-      <h2 id="destino">Agende sua viagem!</h2>
+      
       <form class="container my-3">
         <div class="col">
           <div class="mb-3">
@@ -153,10 +154,11 @@
     </div>
 
     <!-- Promoções -->
-    <div class="container d-flex justify-content-center gap-3">
-      <h2 id="promocoes">Veja as promoções principais</h2>
+    <h2 id="promocoes" class="text-center padding-h2">Veja as promoções principais</h2>
+    <div class="container d-flex justify-content-center gap-3 text-center">
+      
       <div class="card bg-dark promocao-image-card text-white col-4">
-        <img src="./img/brasilia-brazil-2-1560968.jpg" class="card-img" alt="Brasília">
+        <img src="./img/brasil-brasilia.jpeg" class="card-img" alt="Brasília">
         <div class="card-img-overlay">
           <h5 class="card-title">Brasília</h5>
           <p class="card-text">Áereo + 4 viajens</p>
@@ -167,7 +169,7 @@
       </div>
 
       <div class="card bg-dark promocao-image-card text-white  col-4">
-        <img src="./img/long-shot-bahia-nautico-museum-salvdor-brazil-cloudy-blue-skies.jpg" class="card-img"
+        <img src="./img/brasil-salvador.jpeg" class="card-img"
           alt="Bahia">
         <div class="card-img-overlay">
           <h5 class="card-title">Bahia</h5>
@@ -179,7 +181,7 @@
       </div>
 
       <div class="card bg-dark promocao-image-card text-white  col-4">
-        <img src="./img/landscape-rio-de-janeiro-surrounded-by-sea-blue-sky-brazil.jpg" class="card-img" alt="...">
+        <img src="./img/brasil-riod-de-janeiro.jpeg" class="card-img" alt="...">
         <div class="card-img-overlay">
           <h5 class="card-title">Rio de Janeiro</h5>
           <p class="card-text">Áereo + 2 viajens</p>
@@ -192,7 +194,7 @@
 
     <!-- Form de contato-->
     <div>
-      <h2 id="contato">Em em contato conosco!</h2>
+      <h2 id="contato" class="text-center padding-h2">Em em contato conosco!</h2>
       <form class="container" action="">
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label">Nome:</label>
@@ -214,8 +216,8 @@
   </main>
 
   <!-- Footer ou Rodapé do site -->
-  <footer>
-    <p>Desenvolvido por Rafael Martins</p>
+  <footer class="text-center">
+    <p>Desenvolvido por Rafael Martins, com Bootstrap 5 - 2022</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
