--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!--Favicon-->
+  <link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+  <link rel="manifest" href="img/ico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +80,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./img/brasil-riod-de-janeiro.jpeg" class="d-block w-100" alt="...">
+        <img src="./img/brasil-rio-de-janeiro.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Rio de Janeiro</h5>
           <p>Conheça a cidade maravilhosa.</p>
@@ -181,7 +199,7 @@
       </div>
 
       <div class="card bg-dark promocao-image-card text-white  col-4">
-        <img src="./img/brasil-riod-de-janeiro.jpeg" class="card-img" alt="...">
+        <img src="./img/brasil-rio-de-janeiro.jpeg" class="card-img" alt="...">
         <div class="card-img-overlay">
           <h5 class="card-title">Rio de Janeiro</h5>
           <p class="card-text">Áereo + 2 viajens</p>
@@ -194,7 +212,7 @@
 
     <!-- Form de contato-->
     <div>
-      <h2 id="contato" class="text-center padding-h2">Em em contato conosco!</h2>
+      <h2 id="contato" class="text-center padding-h2">Entre em contato conosco!</h2>
       <form class="container" action="">
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label">Nome:</label>
