Working with promocoes section, align to center and make responsive. Some bugs to fix.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!--Favicon-->
   <link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
@@ -172,10 +174,11 @@
     </div>
 
     <!-- Promoções -->
-    <h2 id="promocoes" class="text-center padding-h2">Veja as promoções principais</h2>
-    <div class="container d-flex justify-content-center gap-3 text-center">
-      
-      <div class="card bg-dark promocao-image-card text-white col-4">
+    <h2 id="promocoes" class="text-center padding-h2">Veja as principais promoções</h2>
+
+    <div class="container row d-flex justify-content-md-center text-center gap-3 centered">
+
+      <div class="card bg-dark promocao-image-card text-white">
         <img src="./img/brasil-brasilia.jpeg" class="card-img" alt="Brasília">
         <div class="card-img-overlay">
           <h5 class="card-title">Brasília</h5>
@@ -186,7 +189,7 @@
         </div>
       </div>
 
-      <div class="card bg-dark promocao-image-card text-white  col-4">
+      <div class="card bg-dark promocao-image-card text-white">
         <img src="./img/brasil-salvador.jpeg" class="card-img"
           alt="Bahia">
         <div class="card-img-overlay">
@@ -198,7 +201,7 @@
         </div>
       </div>
 
-      <div class="card bg-dark promocao-image-card text-white  col-4">
+      <div class="card bg-dark promocao-image-card text-white">
         <img src="./img/brasil-rio-de-janeiro.jpeg" class="card-img" alt="...">
         <div class="card-img-overlay">
           <h5 class="card-title">Rio de Janeiro</h5>
@@ -219,7 +222,7 @@
           <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Informe o seu nome">
         </div>
         <div class="mb-3">
-          <label for="formGroupExampleInput2" class="form-label">Assunto</label>
+          <label for="formGroupExampleInput2" class="form-label">E-mail</label>
           <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Informe o seu e-mail">
         </div>
         <div class="mb-3">
@@ -235,7 +238,7 @@
 
   <!-- Footer ou Rodapé do site -->
   <footer class="text-center">
-    <p>Desenvolvido por Rafael Martins, com Bootstrap 5 - 2022</p>
+    <p>Desenvolvido por Rafael Martins - 2022</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -243,5 +246,4 @@
     crossorigin="anonymous"></script>
 
 </body>
-
 </html>
