--- a/index.html
+++ b/index.html
@@ -136,17 +136,22 @@
       <form class="container my-3">
         <div class="col">
           <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">Destino</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
+            <label for="formGroupExampleInput" class="form-label">Origem</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Onde você está?">
           </div>
           <div class="mb-3">
             <label for="formGroupExampleInput2" class="form-label">Data da entrada</label>
             <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
           </div>
           <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label">Destino</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu destino">
+          </div>          
+          <div class="mb-3">
             <label for="formGroupExampleInput2" class="form-label">Data de saída</label>
             <input type="date" class="form-control" id="formGroupExampleInput2" placeholder="Data input placeholder">
           </div>
+          <!--
           <div class="mb-3">
             <label for="inputState" class="form-label">Quartos</label>
             <select id="inputState" class="form-select">
@@ -165,7 +170,7 @@
               <option>3</option>
             </select>
           </div>
-
+          -->
           <div class="col">
             <button type="submit" class="btn btn-primary">Agendar</button>
           </div>
